--- a/Pagina.html
+++ b/Pagina.html
@@ -5,7 +5,7 @@
 	<script>
 	let nombre = "0"
 	nombre = prompt("Cuál es tu nombre?")
-	alert("Bienvenido " + nombre)
+	alert("Bienvenidod " + nombre)
 	</script>
 </head>
 <body>
